# sky-vgl

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  repo_script_imports.py
.github/ISSUE_TEMPLATE/: config.yml  dataset-bug.yml  interop-failure.yml  performance-regression.yml
.github/workflows/: ci.yml  docs.yml  interop-smoke.yml  publish.yml
docs/: architecture.md  changelog.md  core-concepts.md  faq.md  index.md  migration-guide.md  public-surface-contract.md  quickstart.md  readme-asset-prompts.md  releasing.md  support-matrix.md
docs/api/: compat.md  data.md  dataloading.md  distributed.md  engine.md  graph.md  index.md  metrics.md  nn.md  ops.md  sparse.md  storage.md  tasks.md  transforms.md
docs/examples/: conv-zoo.md  distributed-partition.md  index.md  interop.md
docs/getting-started/: index.md  installation.md  quickstart.md
docs/guide/: graph-classification.md  graph.md  hetero.md  index.md  link-prediction.md  node-classification.md  sampling.md  temporal.md  training.md  transforms.md
docs/plans/: 2026-03-14-gnn-framework-design.md  2026-03-14-gnn-framework.md  2026-03-15-graph-classification-design.md  2026-03-15-graph-classification.md  2026-03-15-homo-spectral-conv-pack-design.md  2026-03-15-homo-spectral-conv-pack.md  2026-03-15-link-prediction-design.md  2026-03-15-training-loop-design.md  2026-03-15-vgl-package-rename-design.md  2026-03-17-adaptive-gradient-clipping.md  2026-03-17-balanced-softmax-tasks.md  2026-03-17-class-weighting-tasks.md  2026-03-17-edge-aware-operators.md  2026-03-17-edge-gated-operators.md  2026-03-17-ema-training-strategy.md  2026-03-17-focal-loss-tasks.md  2026-03-17-gradient-centralization.md  2026-03-17-gradual-unfreezing.md  2026-03-17-hetero-attention-operators.md  2026-03-17-history-and-propagation-operators.md  2026-03-17-landmark-operator-phase-3.md  2026-03-17-layerwise-lr-decay.md  2026-03-17-ldam-tasks.md  2026-03-17-lookahead-callback.md  2026-03-17-mixed-precision-training.md  2026-03-17-operator-expansion.md  2026-03-17-package-layout-refactor.md  2026-03-17-point-geometric-operators.md  2026-03-17-rdrop-task.md  2026-03-17-sam-optimizer.md  2026-03-17-step-wise-lr-schedulers.md  2026-03-17-swa-callback.md  2026-03-17-temporal-attention-encoders.md  2026-03-17-temporal-memory-modules.md  2026-03-17-training-state-checkpoint-resume.md  2026-03-17-training-strategies.md  2026-03-17-warmup-cosine-scheduler.md  2026-03-18-bootstrap-beta-scheduler.md  2026-03-18-bootstrap-task.md  2026-03-18-confidence-penalty-scheduler.md  (+108 more)
examples/hetero/: graph_classification.py  node_classification.py
examples/homo/: conv_zoo.py  graph_classification.py  link_prediction.py  node_classification.py
examples/temporal/: event_prediction.py  memory_event_prediction.py
scripts/: benchmark_hotpaths.py  contracts.py  dependency_audit.py  docs_link_scan.py  full_scan.py  install_release_extras.py  interop_smoke.py  metadata_consistency.py  public_surface_scan.py  release_artifact_metadata.py  release_contract_scan.py  release_smoke.py  repo_script_imports.py  workflow_contracts.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/: index.html
site/architecture/: index.html
site/changelog/: index.html
site/core-concepts/: index.html
site/examples/: index.html
site/faq/: index.html
site/getting-started/: index.html
site/guide/: index.html
site/migration-guide/: index.html
site/quickstart/: index.html
site/releasing/: index.html
site/search/: search_index.json
src/gnn/: __init__.py
tests/: test_benchmark_hotpaths.py  test_changelog_discipline.py  test_compat_docs.py  test_compatibility_policy_docs.py  test_direct_script_execution.py  test_docs_api_drift.py  test_docs_link_scan.py  test_example_modules.py  test_exec_scan.py  test_full_scan.py  test_graph_naming_docs.py  test_interop_smoke.py  test_metadata_consistency.py  test_package_exports.py  test_package_layout.py  test_preferred_import_paths.py  test_public_surface_scan.py  test_publish_workflow_policy.py  test_release_contract_scan.py  test_release_packaging.py  test_release_smoke.py  test_release_workflow_docs.py  test_repo_identity.py  test_repo_script_bootstrap.py  test_repo_script_direct_exec.py  test_runtime_compat.py  test_runtime_compile_smoke.py  test_sampling_docs.py  workflow_helpers.py
tests/compat/: test_csv_table_adapter.py  test_dgl_adapter.py  test_edge_list_adapter.py  test_edge_list_csv_adapter.py  test_networkx_adapter.py  test_optional_dependency_messages.py  test_pyg_adapter.py
tests/core/: test_batch_transfer.py  test_feature_backed_graph.py  test_graph_batch.py  test_graph_batch_graph_classification.py  test_graph_homo.py  test_graph_multi_type.py  test_graph_ops_api.py  test_graph_sparse_cache.py  test_graph_transfer.py  test_graph_view.py  test_link_prediction_batch.py  test_node_batch.py  test_schema.py  test_temporal_event_batch.py
tests/data/: test_advanced_samplers.py  test_batch_materialize.py  test_builtin_datasets.py  test_data_cache.py  test_dataset_catalog.py  test_feature_fetch_stage.py  test_link_neighbor_sampler.py  test_link_prediction_loader.py  test_loader.py  test_loader_prefetch.py  test_neighbor_expansion_stage.py  test_node_neighbor_sampler.py  test_ondisk_dataset.py  test_public_datasets.py  test_random_link_split.py  test_record_contracts.py  test_sampler_compatibility_extensions.py  test_sampling_executor.py  test_sampling_plan.py  test_seed_requests.py  test_subgraph_sampler.py  test_temporal_event_loader.py  test_temporal_neighbor_sampler.py
tests/distributed/: test_local_shard.py  test_partition_metadata.py  test_partition_writer.py  (+2 more)
vgl/: __init__.py  _artifact.py  _compat.py  _memory.py  _neighbor_sampling.py  _optional.py
(+491 files in other folders)
