[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "gnn"
version = "0.1.0"
description = "Unified graph learning framework with PyTorch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.4",
  "typing_extensions>=4.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.6",
  "mypy>=1.11",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
no_site_packages = true
ignore_missing_imports = true
