[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "sky-vgl"
dynamic = ["version"]
description = "Unified graph learning framework with PyTorch"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "jhlu", email = "jhlu@kingdonsoft.com" },
]
maintainers = [
  { name = "jhlu", email = "jhlu@kingdonsoft.com" },
]
keywords = [
  "graph learning",
  "graph neural networks",
  "gnn",
  "pytorch",
  "heterogeneous graphs",
  "temporal graphs",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
  "torch>=2.4",
  "typing_extensions>=4.12",
]

[project.urls]
Homepage = "https://github.com/skygazer42/sky-vgl"
Repository = "https://github.com/skygazer42/sky-vgl"
Documentation = "https://skygazer42.github.io/sky-vgl"
Issues = "https://github.com/skygazer42/sky-vgl/issues"
Changelog = "https://github.com/skygazer42/sky-vgl/releases"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "packaging>=24.1",
  "mkdocs>=1.6",
  "mkdocs-material>=9.7",
  "mkdocstrings[python]>=0.29",
  "twine>=5.1",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "pip-audit>=2.8",
  "pre-commit>=3.8",
]
scipy = [
  "scipy>=1.11",
]
networkx = [
  "networkx>=3.2",
]
tensorboard = [
  "tensorboard>=2.14",
]
dgl = [
  "dgl>=1.1.3,<2",
]
pyg = [
  "torch-geometric>=2.5",
]
full = [
  "scipy>=1.11",
  "networkx>=3.2",
  "tensorboard>=2.14",
  "dgl>=1.1.3,<2",
  "torch-geometric>=2.5",
]

[tool.hatch.version]
path = "vgl/version.py"

[tool.hatch.build.targets.wheel]
packages = ["vgl"]

[tool.hatch.build.targets.sdist]
include = [
  "/pyproject.toml",
  "/README.md",
  "/LICENSE",
  "/scripts/release_smoke.py",
  "/scripts/interop_smoke.py",
  "/scripts/install_release_extras.py",
  "/scripts/release_artifact_metadata.py",
  "/scripts/repo_script_imports.py",
  "/scripts/contracts.py",
  "/scripts/workflow_contracts.py",
  "/vgl",
  "/examples",
  "/docs/core-concepts.md",
  "/docs/public-surface-contract.md",
  "/docs/migration-guide.md",
  "/docs/releasing.md",
  "/.github/workflows/ci.yml",
  "/.github/workflows/publish.yml",
]
exclude = [
  "/.factory",
  "/docs/plans",
  "/**/__pycache__",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
no_site_packages = true
ignore_missing_imports = true
